--- a/tweet-app-backend/package.json
+++ b/tweet-app-backend/package.json
@@ -25,6 +25,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.14.6",
     "@types/react-router-dom": "^5.3.3",
+    "@types/swagger-ui-express": "^4.1.3",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -43,6 +44,8 @@
     "paseto": "^3.1.2",
     "sequelize": "^6.29.0",
     "serverless": "^3.28.1",
+    "swagger-ui-express": "^4.6.2",
+    "tsoa": "^5.1.1",
     "typescript": "^4.9.5",
     "util": "^0.12.5"
   }
