--- a/tweet-app-backend/package.json
+++ b/tweet-app-backend/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
-    "start": "node dist/server.js",
+    "start": "nodemon -r dotenv/config dist/server.js",
+    "start:gendoc": "node dist/swagger.js",
     "start:consumer": "node dist/utils/kafka/consumer/index.js",
     "start:producer": "node dist/utils/kafka/producer/index.js"
   },
@@ -25,8 +26,10 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.14.6",
     "@types/react-router-dom": "^5.3.3",
+    "@types/swagger-ui": "^3.52.0",
     "@types/swagger-ui-express": "^4.1.3",
     "bcryptjs": "^2.4.3",
+    "concurrently": "^8.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -44,6 +47,8 @@
     "paseto": "^3.1.2",
     "sequelize": "^6.29.0",
     "serverless": "^3.28.1",
+    "swagger": "^0.7.5",
+    "swagger-autogen": "^2.23.1",
     "swagger-ui-express": "^4.6.2",
     "tsoa": "^5.1.1",
     "typescript": "^4.9.5",
