--- a/tweet-app-backend/package.json
+++ b/tweet-app-backend/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-list-endpoints": "^6.0.0",
+    "express-prom-bundle": "^6.6.0",
     "express-validator": "^6.15.0",
     "http-errors": "^2.0.0",
     "https": "^1.0.0",
@@ -45,6 +46,7 @@
     "mongoose-schema-jsonschema": "^2.0.2",
     "nodemon": "^2.0.21",
     "paseto": "^3.1.2",
+    "prom-client": "^14.2.0",
     "sequelize": "^6.29.0",
     "serverless": "^3.28.1",
     "swagger": "^0.7.5",
