Add jenkins as code setup

--- a/tweet-app-backend/jenkins-setup/casc.yaml
+++ b/tweet-app-backend/jenkins-setup/casc.yaml
@@ -15,4 +15,4 @@ jenkins:
          password: ${JENKINS_ADMIN_PASSWORD}
 unclassified:
   location:
-    url: http://${ROUTER_IP}:8080/
+    url: http://${ROUTER_IP}:8080
